// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-circular-progress.vue Demo-基本用法 1`] = `
<div>
  <div class="root">
    <svg class="svg" viewBox="0 0 90 90">
      <g transform="translate(45, 45) rotate(-90)">
        <circle class="track" cx="0" cy="0" r="42" />
        <circle class="trail" cx="0" cy="0" r="42" stroke-linecap="round" style="stroke-dasharray: 118.7522023056942px 1000px;" />
      </g>
    </svg>
    <div class="text" vusion-slot-name="default">
      <div class="percent" vusion-slot-name="percent">
        <span class="root" vusion-slot-name-edit="text">45%</span>
      </div>
    </div>
    <div class="foot"></div>
  </div>
</div>
`;

exports[`u-circular-progress.vue Demo-基本用法 2`] = `
<div>
  <div class="root">
    <svg class="svg" viewBox="0 0 90 90">
      <g transform="translate(45, 45) rotate(-90)">
        <circle class="track" cx="0" cy="0" r="42" />
        <circle class="trail" cx="0" cy="0" r="42" stroke-linecap="round" style="stroke-dasharray: 95.00176184455535px 1000px;" />
      </g>
    </svg>
    <div class="text" vusion-slot-name="default">
      <div class="percent" vusion-slot-name="percent">36%</div>
    </div>
    <div class="foot"></div>
  </div>
</div>
`;

exports[`u-circular-progress.vue Demo-基本用法 3`] = `
<div>
  <div class="root">
    <svg class="svg" viewBox="0 0 90 90">
      <g transform="translate(45, 45) rotate(-90)">
        <circle class="track" cx="0" cy="0" r="42" />
        <circle class="trail" cx="0" cy="0" r="42" stroke-linecap="round" style="stroke-dasharray: 26.389378290154266px 1000px;" />
      </g>
    </svg>
    <div class="text" vusion-slot-name="default">
      <div class="percent" vusion-slot-name="percent">10%</div>
      <div>VCPU</div>
    </div>
    <div class="foot"></div>
  </div>
</div>
`;

exports[`u-circular-progress.vue Demo-尺寸设置 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div class="root" size="huge">
      <svg class="svg" viewBox="0 0 142 142">
        <g transform="translate(71, 71) rotate(-90)">
          <circle class="track" cx="0" cy="0" r="66" />
          <circle class="trail" cx="0" cy="0" r="66" stroke-linecap="round" style="stroke-dasharray: 149.28848289858698px 1000px;" />
        </g>
      </svg>
      <div class="text" vusion-slot-name="default">
        <div class="percent" vusion-slot-name="percent">36%</div>
      </div>
      <div class="foot"></div>
    </div>
    <div class="root" size="large">
      <svg class="svg" viewBox="0 0 112 112">
        <g transform="translate(56, 56) rotate(-90)">
          <circle class="track" cx="0" cy="0" r="52" />
          <circle class="trail" cx="0" cy="0" r="52" stroke-linecap="round" style="stroke-dasharray: 117.62122895040186px 1000px;" />
        </g>
      </svg>
      <div class="text" vusion-slot-name="default">
        <div class="percent" vusion-slot-name="percent">36%</div>
      </div>
      <div class="foot"></div>
    </div>
    <div class="root">
      <svg class="svg" viewBox="0 0 90 90">
        <g transform="translate(45, 45) rotate(-90)">
          <circle class="track" cx="0" cy="0" r="42" />
          <circle class="trail" cx="0" cy="0" r="42" stroke-linecap="round" style="stroke-dasharray: 95.00176184455535px 1000px;" />
        </g>
      </svg>
      <div class="text" vusion-slot-name="default">
        <div class="percent" vusion-slot-name="percent">36%</div>
      </div>
      <div class="foot"></div>
    </div>
    <div class="root" size="small">
      <svg class="svg" viewBox="0 0 74 74">
        <g transform="translate(37, 37) rotate(-90)">
          <circle class="track" cx="0" cy="0" r="34.5" />
          <circle class="trail" cx="0" cy="0" r="34.5" stroke-linecap="round" style="stroke-dasharray: 78.03716151517047px 1000px;" />
        </g>
      </svg>
      <div class="text" vusion-slot-name="default">
        <div class="percent" vusion-slot-name="percent">36%</div>
      </div>
      <div class="foot"></div>
    </div>
  </div>
</div>
`;
